fix(buttonIcon): fix vertical-align in safari, closes #554

--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -29,6 +29,10 @@
 
   cursor: pointer;
 
+  .icon {
+    vertical-align: top;
+  }
+
   .icon:before,
   &.icon:before,
   &.icon-left:before,
